--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
 
     <header>
-<!-- 
+        <!-- 
 <section>
     <div id="splashscreen">
         <div> -->
-            <!-- <img src="./image/cancha_completa.png" class="splash"/> -->
+        <!-- <img src="./image/cancha_completa.png" class="splash"/> -->
 
 
-            <!-- <video class="splash" controls autoplay muted loop>
+        <!-- <video class="splash" controls autoplay muted loop>
 
                 <source src="./video/intro.mp4" type="video/mp4" id="video-intro"/>
 
@@ -48,7 +48,8 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light navBar_bg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./image/logo_Reftel.jpeg" style="width: 100%" alt="Logo Reftel"></a>
+                <a class="navbar-brand" href="#"><img src="./image/logo_Reftel.jpeg" style="width: 100%"
+                        alt="Logo Reftel"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -66,7 +67,8 @@
                             <a class="nav-link" href="./html/innovacion.html">Innovación</a>
                         </li>
                         <li class="nav-item ">
-                            <button class="boton_contacto"><a class="nav_link_contacto" href="./html/contacto.html">Contactanos</a></button>
+                            <button class="boton_contacto"><a class="nav_link_contacto"
+                                    href="./html/contacto.html">Contactanos</a></button>
                         </li>
                     </ul>
 
@@ -150,7 +152,7 @@
                 <div>
                     <video class="video_intro" controls="controls">
 
-                    <source src="./video/reftel.mp4" type="video/mp4" />
+                        <source src="./video/reftel.mp4" type="video/mp4" />
 
 
                     </video>
@@ -178,7 +180,7 @@
                                     "Mínima interferencia. Máximo beneficio". Bajo esa máxima, el VAR empieza a emerger
                                     en el fútbol argentino.</p>
                                 <a href="https://www.lanacion.com.ar/deportes/futbol/var-futbol-argentino-arbitros-nid2548431/?gclid=CjwKCAjwsNiIBhBdEiwAJK4khgN1yohOp9xcRYESPYi8j3S4lnoJeOk4W5-NV6RxgyCTsTtBt3l0NxoC9u0QAvD_BwE
-                                " class="btn btn-primary">...</a>
+                                " class="btn btn-primary">Ver Más</a>
                             </div>
                         </div>
 
@@ -190,7 +192,8 @@
                                 <h5 class="card-title">Avanza el VAR en la Argentina</h5>
                                 <p class="card-text">Autoridades de AFA, Superliga, IFAB, FIFA y Conmebol se reunieron
                                     para implementar la asistencia arbitral por video en nuestro fútbol.</p>
-                                <a href="https://www.ole.com.ar/futbol-primera/reunion-implementacion-var-argentina_0_idL99Ja3.html" class="btn btn-primary">...</a>
+                                <a href="https://www.ole.com.ar/futbol-primera/reunion-implementacion-var-argentina_0_idL99Ja3.html"
+                                    class="btn btn-primary">Ver Más</a>
                             </div>
 
                         </div>
@@ -223,27 +226,28 @@
 
     </main>
     <footer class="footer_bg flex_footer">
-        <a class= "etiqueta" href="./html/contacto.html"><img src="./image/logo/logo_Footer.png" alt="logo Reftel" style="width: 5%; padding-bottom: 2%;"></a>
+        <a class="etiqueta" href="./html/contacto.html"><img src="./image/logo/logo_Footer.png" alt="logo Reftel"
+                style="width: 5%; padding-bottom: 2%;"></a>
         <div style="padding-bottom: 1rem;">
             <span><img src="./image/maps.png" style="width:3%" /></span>
             <a class="footer_links" href="./html/contacto.html">Basavilbaso 1378 6to, C1006AAD, CABA</a>
         </div>
         <div>
-            <span><img src="./image/phone.png" style="width:3%"/></span>
-            <a class="footer_links" href="./html/contacto.html">+54 9 11 67805747</a>     
+            <span><img src="./image/phone.png" style="width:3%" /></span>
+            <a class="footer_links" href="./html/contacto.html">+54 9 11 67805747</a>
         </div>
     </footer>
 
     <!-- Apartado de JS -->
-<script src="./js/app.js"></script>
+    <script src="./js/app.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
         integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
         integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous">
-    </script>
+        </script>
 
 </body>
 
