--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="card mb-3 ubicacionCard" style="max-width: 800px;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="/image/Group 45.png" class="img-fluid rounded-start" alt="...">
+                            <img src="./image/Group 45.png" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -141,7 +141,7 @@
 
     <footer class="container-fluid cajaFooter">
         <div class="centrar">
-            <img src="/image/logo/reftel_blanco.png" alt="logofooter" width="10%">
+            <img src="./image/logo/reftel_blanco.png" alt="logofooter" width="10%">
             <p>+54 9 11 67805747</p>
             <p>Basavilbaso 1378, CABA</p>
         </div>
