--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="card mb-3 ubicacionCard" style="max-width: 800px;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="..." class="img-fluid rounded-start" alt="...">
+                            <img src="./image/var.png" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
