--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <!-- link css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- link bootstrap 5.x -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-
+    <script src="https://kit.fontawesome.com/a7187feedf.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
@@ -25,8 +26,11 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light navBar_bg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./image/logo_Reftel.jpeg" style="width: 10%" alt="Logo Reftel"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="#"><img src="./image/logo_Reftel.jpeg" style="width: 10%"
+                        alt="Logo Reftel"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -46,82 +50,92 @@
         </nav>
     </header>
     <main>
-        <section>
-            <video controls="controls" autoplay muted loop>
-                <source src="./video/intro.mp4" type="video/mp4" />
-            </video>
-        </section>
+
         <!-- seccion video -->
-        <!-- <section class="hero_bg">
+        <section class="hero_bg">
 
             <video class="video_bg" controls="controls" autoplay muted loop>
-
                 <source src="./video/intro.mp4" type="video/mp4" />
-
-
             </video>
 
             <div class="container">
                 <div class="texto_video">
-                    <h2>Reftel</h2>
-
+                    <h1>Reftel</h1>
                     <p>Soluciones tecnológicas</p>
                     <p>aplicadas al deporte</p>
-
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <!-- Seccion Productos -->
         <section class="container-fluid">
-            <h3>Nuestros Productos</h3>
+            <h2 class="nuestros-productos">Nuestros Productos</h2>
             <div class="margenArriba">
-                <div class="card mb-3 ubicacionCard" style="max-width: 800px;">
+                <div class="card mb-3 ubicacionCard border-0" style="max-width: 800px; margin-left: 122px;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./image/Group 45.png" class="img-fluid rounded-start" alt="...">
+                            <img src="./image/Group 45.png" class="img-fluid rounded p-3" alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Intercomunicadores</h5>
-                                <p class="card-text">Equipos totalmente adaptados para usarse en ambiente ruidoso, interior y exterior: estadio, gimnasios y cualquier tipo de contexto en donde pueda desarrollarse un deporte.</p>
+                                <p class="card-text">Equipos totalmente adaptados para usarse en ambiente ruidoso,
+                                    interior y exterior: estadio, gimnasios y cualquier tipo de contexto en donde pueda
+                                    desarrollarse un deporte.</p>
                                 <button class="btn btn-dark">Ver Mas</button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card mb-3 ubicacionCard" style="max-width: 800px;">
+                <div class="card mb-3 ubicacionCard border-0" style="max-width: 800px; margin-left: 122px;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./image/var.png" class="img-fluid rounded-start" alt="...">
+                            <img src="./image/var.png" class="img-fluid rounded-start p-3" alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">VAR</h5>
-                                <p class="card-text">Nuestra herramienta es la más flexible del mercado, se adapta a la necesidad de nuestros clientes. Buscamos el equilibrio entre la potencia, la confiabilidad y el costo.</p>
+                                <p class="card-text">Nuestra herramienta es la más flexible del mercado, se adapta a la
+                                    necesidad de nuestros clientes. Buscamos el equilibrio entre la potencia, la
+                                    confiabilidad y el costo.</p>
                                 <button class="btn btn-dark">Ver Mas</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <h4>Contamos con mas de 15 años de experiencia</h4>
+
         </section>
 
         <!-- Seccion Caracteristicas -->
+        <div class="experiencia">
+            <h4>Contamos con más de </h4>
+            <h4><b>15 años de experiencia</b></h4>
+        </div>
+
         <section class="container-fluid">
-            <h4>Implementación tecnológica customizada en todos los deportes</h4>
-            <div class="row ubicacionCaract">
-                <p class="col-2 ">Aprendemos de nuestros clientes e ideamos soluciones creativas para cada necesidad </p>
-                <p class="col-2">Analizamos cada caso y construimos una representacion de una o varias ideas para poder mostrar</p>
-                <p class="col-2">Evaluamos junto al cliente y obtenemos el feedback para considerar posibles mejoras</p>
+            <div class="contenedor-fondo">
+                <img src="image/fondo.jpeg" alt="fondo" class="img-fondo">
+
+                <div class="row ubicacionCaract">
+                    <h4>Implementación tecnológica customizada en todos los deportes</h4>
+                    <i class="col-4 fa fa-lightbulb" aria-hidden="true"></i>
+                    <p class="col-4 ">Aprendemos de nuestros clientes e ideamos soluciones creativas para cada necesidad
+                    </p>
+                    <i class="col-4 fa fa-cloud" aria-hidden="true"></i>
+                    <p class="col-4">Analizamos cada caso y construimos una representacion de una o varias ideas para
+                        poder mostrar</p>
+                    <i class="col-4 fa fa-chart-line" aria-hidden="true"></i>
+                    <p class="col-4">Evaluamos junto al cliente y obtenemos el feedback para considerar posibles mejoras
+                    </p>
+                </div>
             </div>
         </section>
 
         <!-- Seccion Clientes -->
         <section>
             <div class="container">
-                <h4>Trabajamos con</h4>
+                <h2>Trabajamos con</h2>
                 <div class="row padding">
                     <div class="col-12 col-sm-4 flex_space ">
                         <img src="./image/logoFifa.png" alt="logo AFA" style="width: 40%;">
@@ -138,6 +152,8 @@
             </div>
         </section>
     </main>
+
+    <!-- Footer -->
 
     <footer class="container-fluid cajaFooter">
         <div class="centrar">
