--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light navBar_bg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./image/logo_Reftel.jpeg" style="width: 10%"
-                        alt="Logo Reftel"></a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ml-auto mb-2 mb-lg-0 mx-auto">
+                    <ul class="navbar-nav ml-auto mb-2 mb-lg-0 mx-auto ">
                         <li class="nav-item">
                             <a class="nav-link" href="./html/productos.html">Productos</a>
                         </li>
@@ -51,12 +50,13 @@
     </header>
     <main>
 
-        <!-- seccion video -->
-        <section class="hero_bg">
+        <!-- seccion portada -->
 
-            <video class="video_bg" controls="controls" autoplay muted loop>
-                <source src="./video/intro.mp4" type="video/mp4" />
-            </video>
+        <section>
+            <div class="img-portada-home">
+
+            </div>
+
 
             <div class="container">
                 <div class="texto_video">
@@ -67,8 +67,9 @@
             </div>
         </section>
 
+
         <!-- Navbar 2 -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navBar_bg sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark navBar_bg sticky-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./image/logo_Reftel.jpeg" style="width: 10%"
                         alt="Logo Reftel"></a>
@@ -141,6 +142,7 @@
             <div class="experiencia">
                 <h4>Contamos con más de </h4>
                 <h4><b>15 años de experiencia</b></h4>
+                <h4>y trabajamos con </h4>
             </div>
 
             <section class="container-fluid">
