--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <!-- link css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- link bootstrap 5.x -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/a7187feedf.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -24,12 +23,10 @@
 <body>
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light navBar_bg">
+        <nav id="navscroll" class="navbar navbar-expand-lg navbar-dark scrolling-nvbar fixed-top ">
             <div class="container-fluid">
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -48,15 +45,14 @@
             </div>
         </nav>
     </header>
+
     <main>
 
         <!-- seccion portada -->
 
         <section>
             <div class="img-portada-home">
-
             </div>
-
 
             <div class="container">
                 <div class="texto_video">
@@ -65,203 +61,167 @@
                     <p>aplicadas al deporte</p>
                 </div>
             </div>
+        </section>>
+
+
+
+        <!-- Seccion Productos -->
+        <section class="container-fluid">
+            <h2 class="nuestros-productos">Nuestros Productos</h2>
+            <div class="margenArriba">
+                <div class="card mb-3 ubicacionCard border-0" style="max-width: 800px; margin-left: 122px;">
+                    <div class="row g-0">
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Intercomunicadores</h5>
+                                <p class="card-text">Equipos totalmente adaptados para usarse en ambiente ruidoso, interior y exterior: estadio, gimnasios y cualquier tipo de contexto en donde pueda desarrollarse un deporte.</p>
+                                <button class="btn btn-dark">Ver Mas</button>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <img src="./image/Group 45.png" class="img-fluid rounded p-3" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3 ubicacionCard border-0" style="max-width: 800px; margin-left: 122px;">
+                    <div class="row g-0">
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">VAR</h5>
+                                <p class="card-text">Nuestra herramienta es la más flexible del mercado, se adapta a la necesidad de nuestros clientes. Buscamos el equilibrio entre la potencia, la confiabilidad y el costo.</p>
+                                <button class="btn btn-dark">Ver Mas</button>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <img src="./image/var.png" class="img-fluid rounded-start p-3" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Seccion Caracteristicas -->
+        <div class="experiencia">
+            <h4>Contamos con más de </h4>
+            <h4><b>15 años de experiencia</b></h4>
+            <h4>y trabajamos con </h4>
+        </div>
+
+        <section class="container-fluid">
+            <div class="contenedor-fondo">
+                <img src="image/fondo.jpeg" alt="fondo" class="img-fondo">
+
+                <div class="row ubicacionCaract">
+                    <h4>Implementación tecnológica customizada en todos los deportes</h4>
+                    <i class="col-4 fa fa-lightbulb" aria-hidden="true"></i>
+                    <p class="col-4 ">Aprendemos de nuestros clientes e ideamos soluciones creativas para cada necesidad
+                    </p>
+                    <i class="col-4 fa fa-cloud" aria-hidden="true"></i>
+                    <p class="col-4">Analizamos cada caso y construimos una representacion de una o varias ideas para poder mostrar</p>
+                    <i class="col-4 fa fa-chart-line" aria-hidden="true"></i>
+                    <p class="col-4">Evaluamos junto al cliente y obtenemos el feedback para considerar posibles mejoras
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Seccion Clientes -->
+        <section>
+            <div class="container">
+                <h2>Trabajamos con</h2>
+                <div class="row padding">
+                    <div class="col-12 col-sm-4 flex_space ">
+                        <img src="./image/logoFifa.png" alt="logo AFA" style="width: 40%;">
+                    </div>
+                    <div class="col-12 col-sm-4 flex_space">
+
+                        <img src="./image/logoAfa.png" alt="logo FIFA" style="width: 30%;">
+                    </div>
+                    <div class="col-12 col-sm-4 flex_space">
+
+                        <img src="./image/logoIfab.png" alt="logo IFAB" style="width: 50%;">
+                    </div>
+                </div>
+            </div>
+            <br>
         </section>
 
 
-        <!-- Navbar 2 -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark navBar_bg sticky-top">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./image/logo_Reftel.jpeg" style="width: 10%"
-                        alt="Logo Reftel"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ml-auto mb-2 mb-lg-0 mx-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="./html/productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./html/contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        </header>
-        <main>
+        <!-- Seccion Contacto -->
 
-            <!-- Seccion Productos -->
-            <section class="container-fluid">
-                <h2 class="nuestros-productos">Nuestros Productos</h2>
-                <div class="margenArriba">
-                    <div class="card mb-3 ubicacionCard border-0" style="max-width: 800px; margin-left: 122px;">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="./image/Group 45.png" class="img-fluid rounded p-3" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">Intercomunicadores</h5>
-                                    <p class="card-text">Equipos totalmente adaptados para usarse en ambiente ruidoso,
-                                        interior y exterior: estadio, gimnasios y cualquier tipo de contexto en donde
-                                        pueda
-                                        desarrollarse un deporte.</p>
-                                    <button class="btn btn-dark">Ver Mas</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card mb-3 ubicacionCard border-0" style="max-width: 800px; margin-left: 122px;">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <img src="./image/var.png" class="img-fluid rounded-start p-3" alt="...">
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">VAR</h5>
-                                    <p class="card-text">Nuestra herramienta es la más flexible del mercado, se adapta a
-                                        la
-                                        necesidad de nuestros clientes. Buscamos el equilibrio entre la potencia, la
-                                        confiabilidad y el costo.</p>
-                                    <button class="btn btn-dark">Ver Mas</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <section>
 
-            </section>
-
-            <!-- Seccion Caracteristicas -->
-            <div class="experiencia">
-                <h4>Contamos con más de </h4>
-                <h4><b>15 años de experiencia</b></h4>
-                <h4>y trabajamos con </h4>
+            <div>
+                <h3 class="mensaje">Contacto</h3>
+                <p>No dudes en dejarnos un mensaje.</p>
+                <p>Estamos para ayudarte y brindarte la mejor atención.</p>
             </div>
 
-            <section class="container-fluid">
-                <div class="contenedor-fondo">
-                    <img src="image/fondo.jpeg" alt="fondo" class="img-fondo">
 
-                    <div class="row ubicacionCaract">
-                        <h4>Implementación tecnológica customizada en todos los deportes</h4>
-                        <i class="col-4 fa fa-lightbulb" aria-hidden="true"></i>
-                        <p class="col-4 ">Aprendemos de nuestros clientes e ideamos soluciones creativas para cada
-                            necesidad
-                        </p>
-                        <i class="col-4 fa fa-cloud" aria-hidden="true"></i>
-                        <p class="col-4">Analizamos cada caso y construimos una representacion de una o varias ideas
-                            para
-                            poder mostrar</p>
-                        <i class="col-4 fa fa-chart-line" aria-hidden="true"></i>
-                        <p class="col-4">Evaluamos junto al cliente y obtenemos el feedback para considerar posibles
-                            mejoras
-                        </p>
-                    </div>
-                </div>
-            </section>
+            <div class="contenedor-contacto">
 
-            <!-- Seccion Clientes -->
-            <section>
-                <div class="container">
-                    <h2>Trabajamos con</h2>
-                    <div class="row padding">
-                        <div class="col-12 col-sm-4 flex_space ">
-                            <img src="./image/logoFifa.png" alt="logo AFA" style="width: 40%;">
-                        </div>
-                        <div class="col-12 col-sm-4 flex_space">
-
-                            <img src="./image/logoAfa.png" alt="logo FIFA" style="width: 30%;">
-                        </div>
-                        <div class="col-12 col-sm-4 flex_space">
-
-                            <img src="./image/logoIfab.png" alt="logo IFAB" style="width: 50%;">
-                        </div>
-                    </div>
-                </div>
-                <br>
-            </section>
-
-
-            <!-- Seccion Contacto -->
-
-            <section>
 
                 <div>
-                    <h3 class="mensaje">Contacto</h3>
-                    <p>No dudes en dejarnos un mensaje.</p>
-                    <p>Estamos para ayudarte y brindarte la mejor atención.</p>
-                </div>
 
-
-                <div class="contenedor-contacto">
-
-
-                    <div>
-
-                        <div class="form-div">
-                            <form class="my-form col-md-8 col-lg-6 col-sm-10 col-sx-12 w-100" id="formularioContacto"
-                                action="https://formspree.io/f/moqybkle" method="POST">
-                                <div class="form-group">
-                                    <label for="Nombre"></label>
-                                    <input id="nombre" type="text" class="form-control" placeholder="Nombre">
-                                </div>
-                                <div class="form-group">
-                                    <label for="email"></label>
-                                    <input id="email" type="email" class="form-control" placeholder="Email">
-                                </div>
-                                <div class="form-group w-75">
-                                    <label for="message" class="formu"></label>
-                                    <textarea id="message" name="message" id="message" class="tamanioMensaje" cols="30"
-                                        rows="10" placeholder="Mensaje"></textarea>
-                                </div>
-                                <div class="div-botonFormContactoSmart">
-                                    <button id="btnCrearSuscriptor" type="submit"
-                                        class="button-form btn-block btn-dark btn-sm ">Enviar</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-
-                    <div>
-                        <div class="div-infoSmart">
-                            <p><i class="fa fa-instagram"></i> Reftel</p>
-                            <p><i class="fas fa-phone"></i> +54 9 11 6780 5747</p>
-                            <p><i class="far fa-envelope"></i> info@reftelcomunicaciones.com</p>
-                            <p><i class="fa fa-map-marker"></i>Basavilbaso 1378 6to, C1006AAD, CABA.</p>
-                        </div>
-                        <div>
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.469669184745!2d-58.37912968517689!3d-34.592283264399335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccab4191a5f89%3A0xb1a318fabf6737d!2sBasavilbaso%201378%2C%20C1006%20CABA!5e0!3m2!1ses!2sar!4v1637859944829!5m2!1ses!2sar"
-                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                                class="mapa"></iframe>
-
-                        </div>
+                    <div class="form-div">
+                        <form class="my-form col-md-8 col-lg-6 col-sm-10 col-sx-12 w-100" id="formularioContacto" action="https://formspree.io/f/moqybkle" method="POST">
+                            <div class="form-group">
+                                <label for="Nombre"></label>
+                                <input id="nombre" type="text" class="form-control" placeholder="Nombre">
+                            </div>
+                            <div class="form-group">
+                                <label for="email"></label>
+                                <input id="email" type="email" class="form-control" placeholder="Email">
+                            </div>
+                            <div class="form-group w-75">
+                                <label for="message" class="formu"></label>
+                                <textarea id="message" name="message" id="message" class="tamanioMensaje" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                            </div>
+                            <div class="div-botonFormContactoSmart">
+                                <button id="btnCrearSuscriptor" type="submit" class="button-form btn-block btn-dark btn-sm ">Enviar</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
-            </section>
 
+                <div>
+                    <div class="div-infoSmart">
+                        <p><i class="fa fa-instagram"></i> Reftel</p>
+                        <p><i class="fas fa-phone"></i> +54 9 11 6780 5747</p>
+                        <p><i class="far fa-envelope"></i> info@reftelcomunicaciones.com</p>
+                        <p><i class="fa fa-map-marker"></i>Basavilbaso 1378 6to, C1006AAD, CABA.</p>
+                    </div>
+                    <div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.469669184745!2d-58.37912968517689!3d-34.592283264399335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccab4191a5f89%3A0xb1a318fabf6737d!2sBasavilbaso%201378%2C%20C1006%20CABA!5e0!3m2!1ses!2sar!4v1637859944829!5m2!1ses!2sar"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="mapa"></iframe>
 
-
-
-
-        </main>
-
-        <!-- Footer -->
-
-        <footer class="container-fluid cajaFooter">
-            <div class="centrar">
-                <img src="./image/logo/reftel_blanco.png" alt="logofooter" width="10%">
-                <p>+54 9 11 67805747</p>
-                <p>Basavilbaso 1378, CABA</p>
+                    </div>
+                </div>
             </div>
-        </footer>
+        </section>
+
+
+
+
+
+    </main>
+
+    <!-- Footer -->
+
+    <footer class="container-fluid cajaFooter">
+        <div class="centrar">
+            <img src="./image/logo/reftel_blanco.png" alt="logofooter" width="10%">
+            <p>+54 9 11 67805747</p>
+            <p>Basavilbaso 1378, CABA</p>
+        </div>
+    </footer>
+    <!-- Js Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- mi JS -->
+    <script src="app.js"></script>
 </body>
 
 </html>
