--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -117,7 +117,7 @@
         " class="btn btn-dark">Leer Noticia</a>
       </div>
 
-      <div class="card">
+      <div class="cardnosotros">
         <img src="../image/card2.PNG" class="card-img-top">
         <br>
         <h5 class="card-title"><b>Avanza el VAR en la Argentina</b></h5>
