--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -60,7 +60,7 @@
       <div class="img-portada-nosotros">
       </div>
 
-      <div class="container">
+      <div class="container-nosotros">
         <div class="texto_nosotros">
           <h1>Nosotros</h1>
 
@@ -78,8 +78,9 @@
       del servicio que presta el arbitraje en nuestro país.</p>
     <br>
 
-    <p class="texto-nosotros"> Inicialmente comenzamos a brindar nuestros servicios de comunicación a la Asociación del
-      Fútbol Argentino más precisamente a los árbitros de la Primera División A, quien gracias a las últimas
+    <p class="texto-nosotros"> Inicialmente comenzamos a brindar nuestros servicios de comunicación a la <b>Asociación
+        del
+        Fútbol</b> Argentino más precisamente a los árbitros de la Primera División A, quien gracias a las últimas
       estadísticas resultó ser la quinta liga de fútbol a
       nivel importancia y competitividad en el mundo según la FIFA.</p>
     <br>
@@ -89,9 +90,10 @@
       organizados en etapa de pretemporada de los equipos de la máxima división.</p>
     <br>
     <p class="texto-nosotros">Luego de trece años ininterrumpidos de brindar nuestro servicio, en noviembre del 2019,
-      REFTEL, fue adjudicada como proveedora de los servicios VAR, por cuatro años.</p>
+      REFTEL, fue adjudicada como <b>proveedora de los servicios VAR, por cuatro años.</b></p>
     <br>
-    <p class="texto-nosotros"> REFTEL fue homologada con la más alta calificación por FIFA/IFAB como una de las tres
+    <p class="texto-nosotros"> REFTEL fue homologada con <b>la más alta calificación por FIFA/IFAB</b> como una de las
+      tres
       empresas oficiales en el mundo están habilitadas para implementar el VAR. Siendo también la única empresa en el
       continente Americano.</p>
     <br>
@@ -106,7 +108,7 @@
     <h2 class="nuestra-historia">Noticias</h2>
 
 
-    <div class="container">
+    <div class="container-nosotros">
       <div class="cardnosotros">
         <img src="../image/card1.PNG" class="card-img-top">
         <br>
