--- a/html/productos.html
+++ b/html/productos.html
@@ -57,10 +57,10 @@
     <!-- seccion portada -->
 
     <section>
-      <div class="img-portada-nosotros">
+      <div class="img-portada-productos">
       </div>
 
-      <div class="container">
+      <div class="container-nosotros">
         <div class="texto_nosotros">
           <h1>Productos</h1>
 
@@ -68,18 +68,37 @@
       </div>
     </section>>
 
-    <!-- texto nosotros -->
+    <!-- intercomunicadores -->
 
-    <h2 class="nuestra-historia">Nuestra Historia</h2>
-    <br>
-    <br>
+    <div>
 
-    <p class="texto-nosotros">Somos una empresa argentina creada en el año 2006 con el propósito de optimizar la calidad
-      del servicio que presta el arbitraje en nuestro país.</p>
-    <br>
+      <h2 class="nuestra-historia">Intercomunicadores</h2>
+      <br>
+      <br>
+
+      <p class="texto-nosotros">La velocidad con la que suceden las acciones en el mundo del deporte les exige a los
+        protagonistas una gran capacidad de reacción para no cometer errores y ayudar a la dinámica del juego.
+        Por eso, es fundamental una <b>comunicación profesional y de alta calidad</b>.
+
+        Nuestros equipos están totalmente adaptados al uso en ambiente ruidoso, interior y exterior: estadios,
+        gimnasios,
+        pabellones, pistas de hielo y cualquier otro tipo de contexto en donde pueda desarrollarse un deporte.
+
+        El <b>sistema full-duplex</b> permite que los intérpretes estén constantemente comunicados, sin necesidad de que
+        manipulen los equipos y de esta manera solo tengan que concentrarse en su rendimiento deportivo.
+
+      </p>
+      <br>
+
+      <img src="../image/intercomunicador.png" alt="Intercomunicador">
 
 
+    </div>
 
+
+    <!-- Cards Productos -->
+
+    <h2 class="nuestra-historia">Producto de alta calidad</h2>
 
 
     <!-- Footer -->
