--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Navbar -->
         <nav id="navscroll" class="navbar navbar-expand-lg navbar-dark scrolling-nvbar fixed-top ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"> <img src="/image/logo/reftel_blanco.png" alt="logo" width=10%></a>
+                <a class="navbar-brand" href="#"> <img src="./image/logo/reftel_blanco.png" alt="logo" width=10%></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
