--- a/html/productos.html
+++ b/html/productos.html
@@ -123,7 +123,7 @@
                                         <p class="texto-cardProductos ">Grabador integrado para guardar conversaciones
                                             en tarjeta SD - Pasarela de audio compatible con cualquier equipo de Var -
                                             Enlace de radio aún más robusto entre el árbitro de campo y los árbitros del
-                                            Var /p>
+                                            Var.
                                         </p>
                                     </div>
                                 </div>
