--- a/html/productos.html
+++ b/html/productos.html
@@ -115,7 +115,7 @@
                         <div class="card mb-3 " style="max-width: 540px; ">
                             <div class="row g-0 ">
                                 <div class="col-md-2 ">
-                                    <img src="... " class="img-fluid rounded-start " alt="... ">
+                                    <i class="fas fa-dumbbell"></i>
                                 </div>
                                 <div class="col-md-10 ">
                                     <div class="card-body inicio">
@@ -169,6 +169,39 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- Cards Productos -->
+
+        <section id="intercomunicadores">
+            <h2 class="titulo-intercomunicador">VAR</h2>
+            <div class="productos-ubicacion">
+                <div class="tamanio-textoIntercomunicador">
+                    <p>Contamos con la <b>herramienta más flexible del mercado</b> pudiendo adaptarse a la necesidad de
+                        nuestros clientes y cumpliendo con las exigencias más altas requeridas en el mercado.<br><br>
+
+                        Sabemos la importancia de un equipo altamente confiable. Es por eso que cuando elegimos nuestros
+                        productos, buscamos un cuidadoso equilibrio entre <b>la potencia, la confiabilidad y el
+                            costo.</b>
+
+                        <br>
+                    </p>
+                </div>
+                <div>
+                    <img src="../image/var1.png" alt="VAR" width=402px>
+                    <br><br><br>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Video-->
+
+        <section>
+
+        </section>
+
+
         <!-- Footer -->
 
         <footer class="container-fluid cajaFooter ">
