--- a/html/productos.html
+++ b/html/productos.html
@@ -174,13 +174,18 @@
         <!-- Cards Productos -->
 
         <section id="intercomunicadores">
+
+
             <h2 class="titulo-intercomunicador">VAR</h2>
             <div class="productos-ubicacion">
                 <div class="tamanio-textoIntercomunicador">
-                    <p>Contamos con la <b>herramienta más flexible del mercado</b> pudiendo adaptarse a la necesidad de
-                        nuestros clientes y cumpliendo con las exigencias más altas requeridas en el mercado.<br><br>
+                    <p>Contamos con la <b>herramienta más flexible del mercado</b> pudiendo adaptarse a la necesidad
+                        de
+                        nuestros clientes y cumpliendo con las exigencias más altas requeridas en el
+                        mercado.<br><br>
 
-                        Sabemos la importancia de un equipo altamente confiable. Es por eso que cuando elegimos nuestros
+                        Sabemos la importancia de un equipo altamente confiable. Es por eso que cuando elegimos
+                        nuestros
                         productos, buscamos un cuidadoso equilibrio entre <b>la potencia, la confiabilidad y el
                             costo.</b>
 
@@ -191,15 +196,26 @@
                     <img src="../image/var1.png" alt="VAR" width=402px>
                     <br><br><br>
                 </div>
+
             </div>
         </section>
 
 
         <!-- Video-->
 
+
         <section>
 
+
+            <video class="video-productos" controls="controls" autoplay muted loop>
+
+                <source src="../video/Reftel_-_SPORT_TECHNOLOGY.mp4" type="video/mp4" />
+
+
+            </video>
         </section>
+
+
 
 
         <!-- Footer -->
