--- a/html/productos.html
+++ b/html/productos.html
@@ -190,7 +190,7 @@
                         </p>
                     </div>
                     <div>
-                        <img src="../image/var1.png" alt="VAR" width=402px>
+                        <img class="imagen-var" src="../image/var1.png" alt="VAR" width=402px>
                         <br><br><br>
                     </div>
                 </div>
